Problem solved -> height on IOS

--- a/portfolio/sua_festa/style.css
+++ b/portfolio/sua_festa/style.css
@@ -3,11 +3,18 @@
     padding: 0;
 }
 
+body{
+    height: 100vh;
+    max-height: -webkit-fill-available;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+}
+
 @media screen and (min-width: 320px){
 
     .page-wrapper{
     width: 100%;
-    height: 100vh;  
+    height: 100%;  
     display: table;
     background-color: #03045E;
     overflow: hidden;
